--- a/index.html
+++ b/index.html
@@ -148,13 +148,17 @@
 									from Crowdsourced Introductory Description of
 									Information Visualizations</span>
 								<br>
-								<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Cindy Xiong, Jason K. Wong, Aoyu Wu, Huamin Qu</span>
+								<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Cindy Xiong, Jason K.
+									Wong, Aoyu Wu, Huamin Qu</span>
 								<br>
 								<span class="pub_type"><span class="label label-default">TVCG</span> <span
 										class="pub_type">IEEE Transactions on Visualization and Computer Graphics</span>
 									<br>
-									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://arxiv.org/pdf/2112.12364.pdf">pdf</a>][<a href="index.html">video: will give a talk at IEEE VIS2022</a>][<a
-											href="https://osf.io/asvt6/?view_only=559eb881e3f640aa984d0ca8ad593d0a">osf page</a>]</span>
+									<span class="pub_downloads" id="moocad_pre">Material: [<a
+											href="https://arxiv.org/pdf/2112.12364.pdf">pdf</a>][<a
+											href="index.html">video: will give a talk at IEEE VIS2022</a>][<a
+											href="https://osf.io/asvt6/?view_only=559eb881e3f640aa984d0ca8ad593d0a">osf
+											page</a>]</span>
 								</span>
 							</p>
 						</div>
@@ -172,14 +176,19 @@
 					<div class="col-md-8 col-xs-12">
 						<div class="desc">
 							<p>
-								<span class="pub_title">From Wow to Why: Guidelines for Creating the Opening of a Data Video
+								<span class="pub_title">From Wow to Why: Guidelines for Creating the Opening of a Data
+									Video
 									with Cinematic Styles</span>
 								<br>
-								<span class="pub_authors">Xian Xu, <span class="pub_me">Leni Yang</span>, David Yip, Mingming Fan, Zheng Wei, Huamin Qu</span>
+								<span class="pub_authors">Xian Xu, <span class="pub_me">Leni Yang</span>, David Yip,
+									Mingming Fan, Zheng Wei, Huamin Qu</span>
 								<br>
-								<span class="pub_type"><span class="label label-default">CHI</span> In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI 2022)</span>
-									<br>
-									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://arxiv.org/pdf/2202.02709.pdf">pdf</a>][<a href="https://www.youtube.com/watch?v=h30FWTTkQP4">video</a>]
+								<span class="pub_type"><span class="label label-default">CHI</span> In Proceedings of
+									the SIGCHI Conference on Human Factors in Computing Systems (CHI 2022)</span>
+								<br>
+								<span class="pub_downloads" id="moocad_pre">Material: [<a
+										href="https://arxiv.org/pdf/2202.02709.pdf">pdf</a>][<a
+										href="https://www.youtube.com/watch?v=h30FWTTkQP4">video</a>]
 								</span>
 							</p>
 						</div>
@@ -208,7 +217,9 @@
 										class="pub_type"><span class="label label-default">InfoVis</span> IEEE
 										Transactions on Visualization and Computer Graphics (IEEE Vis2021)</span>
 									<br>
-									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://idvxlab.com/papers/2021VIS_Pyramid_Yang.pdf">pdf</a>][<a href="https://youtu.be/mkZDFyOXxa8">video</a>][<a
+									<span class="pub_downloads" id="moocad_pre">Material: [<a
+											href="https://idvxlab.com/papers/2021VIS_Pyramid_Yang.pdf">pdf</a>][<a
+											href="https://youtu.be/mkZDFyOXxa8">video</a>][<a
 											href="https://pyramidstory.idvxlab.com/">project page</a>]</span>
 								</span>
 							</p>
@@ -250,6 +261,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div id="project">
 			<div class="container">
 				<div class="row text-center">
@@ -289,6 +301,142 @@
 				</div>
 			</div>
 		</div>
+
+		<div id="award">
+			<div class="container">
+				<div class="row text-center">
+					<h2 class="bold">Awards</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="rotate">
+							<h2 class="heading">Awards</h2>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2020
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Research & Development Award in Asia Pacific Information and Communications
+									Technology Alliance (APICTA) Awards
+									</br>
+									<span class="footer-news">
+										Project: Pulse of HKUST
+									</span>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2019
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Gold Award, Student Innovation in Hong Kong ICT Awards (HKICT)
+									</br>
+									<span class="footer-news">
+										Project: Pulse of HKUST
+									</span>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2018
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Outstanding Graduates of Sichuan Province
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2018
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Outstanding Graduates of University of Electronic Science and Technology of China (UESTC) 
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2018
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Excellent Graduation Thesis of University of Electronic Science and Technology of China (UESTC) 
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2015 - 2017
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									China National Scholarship (Three times)
+									</br>
+									<span class="footer-news">
+										The most celebrated scholarship granted by Chinese government, 0.2%
+									</span>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2017
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									Honorable Mention in Mathematical Contest in Modeling/Interdisciplinary Contest In
+									Modeling (MCM/ICM)
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row text-center">
+						<div class="col-md-2">
+							2016
+						</div>
+						<div class="col-md-10">
+							<div class="desc">
+								<p>
+									The First Prize (Sichuan Province) in Contemporary Undergraduate Mathematical
+									Contest in Modeling
+								</p>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
 		<div id="blog">
 			<div class="container">
 				<div class="row text-center">
