--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am Leni Yang(杨乐妮), a PhD student in the Department of Computer Science and
+								<p>I am Leni Yang(杨乐妮), a Postdoc Research in the Department of Computer Science and
 									Engineering at the Hong Kong University of Science and Technology, under the
 									supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I
-									obtained my Bachelor in Information Management System degree from the University of
-									Electronic Science and Technology of China in June, 2018.
+									obtained my PhD degree from the Hong Kong University of Science and Technology 
+									in Sep, 2022.
 									</br>
 									My research interest lies in Data Visualization. My mission is to increase the
 									accessibility of data visualizations to the general public.
