--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am Leni Yang(杨乐妮), a Postdoc Researcher in the Department of Computer Science and
+								<p>I am Leni Yang(杨乐妮), a Postdoctoral Researcher in the Department of Computer Science and
 									Engineering at the Hong Kong University of Science and Technology, under the
 									supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I
 									obtained my PhD degree from the Hong Kong University of Science and Technology 
