--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									She is currently on the job market! 
 								</p>
 								<p>
-									<span class="text-bold"><a href="https://github.com/YLeni">CV</a></span> | <span class="text-bold">Contact: </span>lyangbb (at) connect.ust.hk 
+									<span class="text-bold"><a href="./profiles/CV_Leni_Yang.pdf">CV</a></span> | <span class="text-bold">Contact: </span>lyangbb (at) connect.ust.hk 
 								</p>
 								
 							</div>
