--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</br>
 									Her research interest lies in Data Visualization. 
 									Her research mission is to lower the barrier and increase the effectiveness of communication with data visualizations in various application scenarios 
-									such as public enducation, oral presentations, data storytelling, and so on.
+									such as public education, oral presentations, data storytelling, and so on.
 								</p>
 								<p style="font-weight: 700; color:cadetblue">
 									She is currently on the job market! 
