--- a/index.html
+++ b/index.html
@@ -76,14 +76,18 @@
 									supervision of <a href="http://huamin.org/">Prof. Qu Huamin.</a> Before that, she
 									obtained her PhD degree from the Hong Kong University of Science and Technology 
 									in Sep, 2022.
-									</br>
-								</br>
-									Her research interest lies in Data Visualization. 
-									Her research mission is to lower the barrier and increase the effectiveness of communication with data visualizations in various application scenarios 
-									such as public education, oral presentations, data storytelling, and so on.
 								</p>
-								<p style="font-weight: 700; color:cadetblue">
+								<p class = "blue-highlight">
 									She is currently on the job market! 
+								</p>
+								<p>
+									Her research interest lies in <span class="blue-highlight"> Data Visualization </span>.
+									Her research mission is to lower the barrier and increase the effectiveness of <span class="blue-highlight">communication with data visualizations</span> in various application scenarios 
+									such as data storytelling, public education, public speaking, sustainability and so on.
+								</p>
+								<p>
+								    Her work has been published in top conferences and journals in the feild of data visualization and human-computer interaction. 
+									She conduct studies to explore and evaluate pracitices in the wild and expriment advanced approaches and medias (e.g., XR, tangible interface) for communicating data insights with visualization techniques.
 								</p>
 								<p>
 									<span class="text-bold"><a href="./profiles/CV_Leni_Yang.pdf">CV</a></span> | <span class="text-bold">Contact: </span>lyangbb (at) connect.ust.hk 
@@ -111,6 +115,32 @@
 						<div class="rotate">
 							<h2 class="heading">Publications</h2>
 						</div>
+
+						<div class="row paper-block" id="ending">
+							<div class="col-md-3 col-xs-12">
+								<div class="item">
+									<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4361223">
+										<img class="img-thumbnail" src="images/vrpublichealth.png">
+									</a>
+								</div>
+							</div>
+							<div class="col-md-9 col-xs-12">
+								<div class="desc">
+									<p>
+										<span class="pub_title">From Reader to Experiencer: Design and Evaluation of an Interactive Vr Story for Promoting the Situation Awareness of Public Health Threats</span>
+										<br>
+										<span class="pub_authors">Qian Zhu, Linping Yuan, Zian Xu, <span class="pub_me">Leni Yang</span>, Meng Xia, Zhuo Wang, Hai-Ning Liang, Xiaojuan Ma</span>
+										<br>
+										<span class="pub_type"><span class="label label-default">In Review</span>Available at SSRN 4361223</span>
+										<br>
+										<span class="pub_downloads" id="moocad_pre">Material: 
+											[<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4361223">pdf</a>]
+										</span>
+									</p>
+								</div>
+							</div>
+						</div>
+
 						<div class="row paper-block" id="ending">
 							<div class="col-md-3 col-xs-12">
 								<div class="item">
@@ -128,7 +158,7 @@
 											Rong Huang, David Yip, Huamin Qu</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">CHI</span> In Proceedings of
-											the SIGCHI Conference on Human Factors in Computing Systems</span>
+											the SIGCHI Conference on Human Factors in Computing Systems, 2023</span>
 										<br>
 										<span class="pub_downloads" id="moocad_pre">Material: 
 											[<a href="https://dl.acm.org/doi/pdf/10.1145/3544548.3580701">pdf</a>]
@@ -156,7 +186,7 @@
 										<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Aoyu Wu, Wai Tong, Xian Xu, Zheng Wei, Huamin Qu</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">PacificVis</span> <span
-												class="pub_type"> In Proceedings of the IEEE Pacific Visualization Symposium</span>
+												class="pub_type"> In Proceedings of the IEEE Pacific Visualization Symposium, 2023</span>
 											<br>
 											<span class="pub_downloads" id="moocad_pre">Material: 
 												[<a href="./publications/pvis23_vrdatavideo.pdf">pdf</a>]
@@ -185,7 +215,7 @@
 											Mingming Fan, Zheng Wei, Huamin Qu</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">CHI</span> In Proceedings of
-											the SIGCHI Conference on Human Factors in Computing Systems</span>
+											the SIGCHI Conference on Human Factors in Computing Systems, 2022</span>
 										<br>
 										<span class="pub_downloads" id="moocad_pre">Material: 
 											[<a href="https://dl.acm.org/doi/pdf/10.1145/3491102.3501896">pdf</a>]
@@ -215,7 +245,7 @@
 											Wong, Aoyu Wu, Huamin Qu</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">TVCG</span> <span
-												class="pub_type">IEEE Transactions on Visualization and Computer Graphics</span>
+												class="pub_type">IEEE Transactions on Visualization and Computer Graphics, 2023</span>
 											<br>
 											<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://arxiv.org/pdf/2112.12364.pdf">pdf</a>]
 												[<a href="https://osf.io/asvt6/?view_only=559eb881e3f640aa984d0ca8ad593d0a">osf page</a>]
@@ -237,15 +267,15 @@
 							<div class="col-md-9 col-xs-12">
 								<div class="desc">
 									<p>
-										<span class="pub_title">A design space for applying the Freytag's Pyramid structure
-											to data stories</span>
+										<span class="pub_title">A Design Space for Applying the Freytag's Pyramid Structure
+											to Data Stories</span>
 										<br>
 										<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Xian Xu, Xingyu
 											Lan,
 											Ziyan Liu, Shunan Guo, Yang Shi, Huamin Qu, Nan Cao</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">VIS/TVCG</span> IEEE
-												Transactions on Visualization and Computer Graphics</span>
+												Transactions on Visualization and Computer Graphics, 2022</span>
 											<br>
 											<span class="pub_downloads" id="moocad_pre">Material: [<a
 													href="https://idvxlab.com/papers/2021VIS_Pyramid_Yang.pdf">pdf</a>][<a
