minor editing issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								</p>
 								<p>
 								    Her work has been published in top conferences and journals in the feild of data visualization and human-computer interaction. 
-									She conduct studies to explore and evaluate pracitices in the wild and expriment advanced approaches and medias (e.g., XR, tangible interface) for communicating data insights with visualization techniques.
+									She conducts studies to explore and evaluate pracitices in the wild and expriments advanced approaches and medias (e.g., XR, tangible interface) for communicating data insights with visualization techniques.
 								</p>
 								<p>
 									<span class="text-bold"><a href="./profiles/CV_Leni_Yang.pdf">CV</a></span> | <span class="text-bold">Contact: </span>lyangbb (at) connect.ust.hk 
