--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
 								<p>
 									Her research interest lies in <span class="blue-highlight"> Data Visualization</span>.
 									Her research mission is to lower the barrier and increase the effectiveness of <span class="blue-highlight">communication with data visualizations</span> in various application scenarios 
-									such as data storytelling, public education, public speaking, sustainability and so on.
+									such as data storytelling, public education, public speaking, sustainability, and so on.
 								</p>
 								<p>
-								    Her work has been published in top conferences and journals in the feild of data visualization and human-computer interaction. 
-									She conducts studies to explore and evaluate pracitices in the wild and expriments advanced approaches and medias (e.g., XR, tangible interface) for communicating data insights with visualization techniques.
+								    Her work has been published in top conferences and journals in the field of data visualization and human-computer interaction. She conducts studies to explore and evaluate practices in the wild and experiments with advanced approaches and media (e.g., XR, tangible interface) for communicating data insights with visualization techniques.
 								</p>
 								<p>
 									<span class="text-bold"><a href="./profiles/CV_Leni_Yang.pdf">CV</a></span> | <span class="text-bold">Contact: </span>lyangbb (at) connect.ust.hk 
